--- a/scss/app.scss
+++ b/scss/app.scss
@@ -23,10 +23,12 @@ label {
     width: 100%;
 }
 
-.autorotate {
+.autorotate,
+.cube-model {
     margin-top: 5px;
     width: 100%;
     display: flex;
     justify-content: center;
     gap: 10px;
 }
+
